--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='with=device-with,inicial-scale=1'>
-    <title>{%block title %}{%endblock title%} </title> 
+    <title>{%block title%}Therapy Profiles{%endblock title%}</title>
 
     {% load django_bootstrap5 %}
     {% bootstrap_css %}
@@ -15,7 +15,7 @@
 <nav class='navbar navbar-expand-md navbar-light bg-light mb-4 boder'>
     <div class='container-fluid'>
         <a class='navbar-brand' href="{% url 'learning_logs:index' %}">
-            Between App </a>
+            Learning Log </a>
 
         <button class='navbar-toggler' type='button' data-bs-toggle='collapse'
         data-bs-target='#navbarCollapse' aria-controls='navbarCollapse'
@@ -23,44 +23,53 @@
         <span class='navbar-toggler-icon'></span>
         </button>
         
+        <!-- collapsable part of the Navegation Bar -->
         <div class='collapse navbar-collapse' id='navbarCollapse'>
-            <ul class='navbar-nav me-auto mb2 mb-md-0'>
+            <ul class='navbar-nav me-auto mb2 mb-md-0'> <!-- 'me' refers to left, and 'ms' to right -->
                 <li class='nav-item'>
                     <a class='nav-link' href="{% url 'learning_logs:topics' %}">
-                        Styles </a></li>
+                        Topics </a></li>
             </ul><!-- End of links on left side of nvbar -->
             
             <!-- Account related links-->
             <ul class='navbar-nav ms-auto mb-2 mb-md-0'>
                 {% if user.is_authenticated %}
                 <li class='nav-item'>
-                    <span class='navbar-text me-2'>Hello,{{user.username}} 
+                    <span class='navbar-text me-2'>Hello,{{user.username}}.
                     </span></li>
                 {% else %}
                 <li class='nav-item'>
-                    <a class='nav-link' href="{% url 'accounts:signup' %}">Signup</a></li>
+                    <a class='nav-link' href="{% url 'accounts:register' %}">Register</a></li>
                 <li class='nav-item'>
                     <a class='nav-link' href="{% url 'accounts:login'    %}">Log in</a></li>
                 {% endif %}
-                    </ul> 
-                <!-- End of account related links -->
-            {% if user.is_authenticated %}
-                <form action='{% url 'accounts:logout' %}' method='post'>
-                    {% csrf_token %}
-                    <button name='submit' class='btn btn-outline-secondary btn-sm'>
-                        Log out</button>
-                    </form>
-            {% endif %}
+            </ul> 
+                {% if user.is_authenticated %}
+                    <form action="{% url 'accounts:logout' %}" method='post'>
+                        {% csrf_token %}
+                        <button name='submit' class='btn btn-outline-secondary btn-sm'>
+                            Log out</button>
+                        </form>
+                {% endif %}
+             <!-- End of account related links -->
 
-
-            
 
         </div> <!-- Closes collapsible parts of navbar -->
     </div><!-- closes navbar container-->
 </nav><!-- end of navbar -->
 
-{% block content %} {% endblock content %}
+<!-- Main section -->
 
+<main class='container'>
+    <div class='pb-2 mb-2 border-bottom'>
+        {% block page_header %}{% endblock page_header %} </div>
+        
+    <div> 
+        {% block content %} {% endblock content %}      </div>
+    
+    
+</main>
+<footer></footer>
 </body>
 </html>
 
