--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -2,12 +2,12 @@
 
 {%block title%}PsyProfile{%endblock title%}
 
-{%block header%}Take the test to see your therapeutic style {%endblock header%}
+{%block page_header%}Take the test to see your therapeutic style {%endblock page_header%}
 
 
 {%block content%}
 
-<a href={% url 'between_app:take_test' %}>Take the test </a>
+<a href={% url 'between_app:profile_test' %}>Take the test </a>
 
 
 
