--- a/between_app/templates/between_app/results.html
+++ b/between_app/templates/between_app/results.html
@@ -33,4 +33,5 @@
 <p>Relationship with tradition: {{style_detail.calProfile.main_tradition}}</p>
 
 </br>
+<a href={%url 'between_app:personal_style_detail' style_detail.pk %}>The scores</a>
 {% endblock content%}
