--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'learning_logs/base.html' %}
+{% extends 'between_app/_base.html' %}
 {% load django_bootstrap5 %}
 {% bootstrap_css%}
 {%bootstrap_javascript%}
