--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -1,13 +1,17 @@
 {% extends 'between_app/_base.html' %}
+{% load django_bootstrap5%}
 
+
+{%block page_header%}Sign in </br> <h2>To record your profile</h2>
+
+{%endblock page_header%}
 {% block content %}
 
-<h2>Registration</h2>
+
 <form method='post'>
     {% csrf_token %}
-    {{form.as_p}}
-
-    <button type='submit'>Signup</button>
+    {%bootstrap_form form%}
+    {%bootstrap_button button_type='submit' content='Sign Up'%}
 </form>
 
 {% endblock content %}
