--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -28,7 +28,7 @@
             <ul class='navbar-nav me-auto mb2 mb-md-0'> <!-- 'me' refers to left, and 'ms' to right -->
                 <li class='nav-item'>
                     <a class='nav-link' href="{% url 'between_app:results_list' %}">
-                        Tests </a></li>
+                        My Tests </a></li>
             </ul><!-- End of links on left side of nvbar -->
             
             <!-- Account related links-->
