--- a/between_app/templates/between_app/personal_style_list.html
+++ b/between_app/templates/between_app/personal_style_list.html
@@ -5,8 +5,9 @@
 <h1>Therapist Style</h1>
 
 <p>A space to think about your therapeutic style.</p>
-
+<ul>
 {%for item in style_list %}
-    <a href={% url 'between_app:results' item.pk %}>{{item.pk}}, {{user.username}}</a>
+    <li><a href={% url 'between_app:results' item.pk %}>{{item.user}}'s Therapist Profile: {{item.updated_at|date:'D,m,Y'}}</a></li>
 {% endfor%}
+</ul>
 {% endblock content%}
