--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -6,6 +6,9 @@
 
 
 {%block content%}
+<h2>Profile: </h2>
+<p>Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
+<p>They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
 
 <a href={% url 'between_app:profile_test' %}>Take the test </a>
 
