--- a/between_app/templates/between_app/results.html
+++ b/between_app/templates/between_app/results.html
@@ -14,6 +14,7 @@
 <p>Many new traditions are placed in-between positions, making the current landscape more fluid. This model aims to help therapist and clients to identify the positions where they feel more comfortable and which ones feel harder.</p>
 </br>
 
+<p>{{now}}</p>
 
 <div class="card mb-3">
     <img src="..." class="card-img-top" alt="...">
