--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -11,8 +11,8 @@
 
 </head>
 
-
-<nav class='navbar navbar-expand-md navbar-light bg-light mb-4 boder'>
+<body class='bg-light'>
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
     <div class='container-fluid'>
         <a class='navbar-brand' href="{% url 'between_app:index' %}">
             Therapy Profiles </a>
