--- a/between_app/templates/between_app/content.html
+++ b/between_app/templates/between_app/content.html
@@ -2,19 +2,31 @@
 {%block title%} List {%endblock title %}
 
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'between_app/css/image.css' %}">
+
 <h1>Therapist Style: categories explained</h1>
 
-<p>A space to delve in more styles </p>
+<p>A space to delve in more styles, so you can explore your weak points.</p>
 {% for c, i in content.items %}
 <H1>{{c|title}}</H1>
     {% for e, ee in i.items %}
+
+    <div class="card bg-active mb-3">
+        <div class="card-body">
+
         <h2>{{e|title}}</h2>
         <ul>
         {%for a, aa in ee.items %}
+        {% if a == 'image' %}
+        <image src="{% static aa %}" class='posImage'>
+            {% else %}
             <li><b><p>{{a|title}}</b>:{{aa}}</p></li>
-                {% endfor %}
+            {% endif %}
+            {% endfor %}
         </ul>
-    {% endfor %}
+    </div></div>
 
+    {% endfor %}
 {% endfor %}
 {% endblock content%}
