--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -1,16 +1,23 @@
 {% extends 'between_app/_base.html' %}
 {% load static %}
 {%block title%}PsyProfile{%endblock title%}
+{% load django_bootstrap5%}
 
-{%block page_header%}Take the test to see your therapeutic style {%endblock page_header%}
+{%block page_header%}Therapeutic Profiles{%endblock page_header%}
 
 
 {%block content%}
-<h2>Profile: </h2>
-<p>Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
-<p>They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
 
-<a href={% url 'between_app:profile_test' %}>Take the test </a>
+<div class="card mb-3">
+    <div class="card-body">
+<h2 class="card-title">Profile: </h2>
+<p class="card-text">Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
+<p class="card-text">They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
+<a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
+<a class="badge bg-primary p-2 m-2" href={% url 'between_app:profile_test' %}>Take the test </a></br>
+
+</div>
+</div>
 
 
 {%endblock content%}
