--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -5,7 +5,7 @@
 
 <p>Learning Log helps you keep track of your learning, for any topic you are interested in.</p>
 
-<a href={% url 'learning_logs:afterQuestions' %}>After session questions</a>
+<a href={% url 'learning_logs:after_answer_date' %}>After session questions</a>
 
 </br></br>
 
