--- a/between_app/templates/between_app/BigTraditions/traditions_test.html
+++ b/between_app/templates/between_app/BigTraditions/traditions_test.html
@@ -2,7 +2,7 @@
 {% load django_bootstrap5 %}
 
 {% block page_header%}
-<h2> New Profile test </h2>
+<h2>Traditions Test </h2>
 
 {% endblock page_header%}
 
@@ -10,7 +10,7 @@
 
 {%block content%}
 
-  <form action="{% url 'between_app:profile_test' %}" method='post'>
+  <form action="{% url 'between_app:traditions_test' %}" method='post'>
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type='submit' content='Submit Profile' %}
