--- a/pages/templates/pages/creation.html
+++ b/pages/templates/pages/creation.html
@@ -63,12 +63,12 @@
 
 
         
-        <h5 id="item-1-2">Profiles:</h5>
+        <h5 id="item-1-2">Creating your Approach:</h5>
         <p>Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
         <p>They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
         
         
-        <h4 id="item-2">Item 2</h4>
+        <h4 id="item-2">Combining the tests</h4>
         <p>...</p>
         
         
