--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -60,9 +60,9 @@
     </ul>
     
     <image class="rounded w-75 mb-2" src="{% static 'pages/images/eagle_eye.png' %}" alt='Image showing the five parts with the tradition as a colum to the left and the person as a colum to the right'>
-    <p>As an image, when we can learn moving between these parts, we can digest knoledge in a more coherent way. The traditions bring a language and give context. They also bring some asumptions in the middle section that needs to dialogue with the person's assumtions.</p>
+    <p>As an image, when we can learn moving between these parts, we can digest knoledge in a more coherent way. The traditions bring a language and give context. They also bring some asumptions in the middle section that dialogues with the person's assumtions.</p>
     <p>There is therefore a needed space for you to reflect on your learning. Inside traditions there are usually sub-groups, that share the language, but also may have other reality assumptions and sub-models (ie compare Winnicott, Lacan and Bion in psychoanalisis).</p>
-    <p>By giving yourself space to procses, you may also find likeminded authors and colleagues. You may also find small adjustments to the theory, the practice, or to the reality assumptions that may make things fit you better.</p> 
+    <p>By giving yourself space to procses, you may also find like minded authors and colleagues. You may also make small adjustments to the theory, the practice, or to the reality assumptions to make things fit you better.</p> 
   </br>
 
 
@@ -74,8 +74,8 @@
         <li>promote personal creation, by seeing theory as a creative/developmental process, and</li>
         <li>to create a language for mutual understanding in a space of multiplicity of thinking.</li>    
       </ul>
-      <p>Other meta projects tend to defoult into a new tradition, and to multiply as traditions do. This project aims to be an approach between (a concept I tend to use theoretically).</p>
-      <p></p>
+      <p>Other meta projects tend to default into a new tradition, and to multiply as traditions do. This project aims to be an approach between (a concept I tend to use theoretically).</p>
+      <p>What I would hope is for this project to work more like a wiki, or like a Github open-source, where we can keep improving the main idea by keeping it open. For this reaons, try to separate the main model with my own coments about the model, so you can make your own voice inside a theoretical frame.</p>
 
     
     <h5 id="item-1-2">Profiles:</h5>
