--- a/learning_logs/templates/learning_logs/shadow/shadow_item.html
+++ b/learning_logs/templates/learning_logs/shadow/shadow_item.html
@@ -9,13 +9,16 @@
       <h5 class="card-title">{{shadows.title}}</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">{{shadows.date_added|date}}</h6>
       <Goal class="card-text">Goal of the exploration: {{shadows.goal}} </P>
-      <My class="card-text">My sensations: {{shadows.sensation}} </p>
-      <My class="card-text">My connections: {{shadows.connection}}</p>
-      <p class="card-text">My metaphoric space: {{shadows.metaphore}}  </p>
-      <p class="card-text">My Concepts: {{shadows.concepts}}</p>
-      <p class="card-text">My craft idea: {{shadows.craft}}</p>
+      <My class="card-text">My opposite style: {{shadows.text_opposite_style}} </p>
+      <My class="card-text">My opposite sexuality: {{shadows.text_opposite_sex}}</p>
+      <p class="card-text">My opposite elements: {{shadows.text_opposite_elements}}  </p>
+      <p class="card-text">My transference characters: {{shadows.text_transf_characters}}</p>
+      <p class="card-text">My passion for cure: {{shadows.text_furor_curandis}}</p>
+      <p class="card-text">My trauma history: {{shadows.text_trauma_history}}</p>
+      <p class="card-text">My trauma triggers: {{shadows.text_trauma_triggers}}</p>
+      <p class="card-text">My care plan: {{shadows.text_care_plan}}</p>
       <a href="{% url 'learning_log:shadows_by_date' %}" class="card-link">Back to shadows</a>
-      <a href="{% url 'learning_log:index' %}" class="card-link">Back to Journal's home</a>
+      <a href="{% url 'learning_log:index' %}" class="card-link">Back to Journaling home</a>
     </div>
   </div>
 
