improved access to tests

--- a/learning_logs/templates/learning_logs/creating/creation_by_date.html
+++ b/learning_logs/templates/learning_logs/creating/creation_by_date.html
@@ -3,19 +3,18 @@
 
 {% block content %}
 
-<p>Answers after Session</p>
+<p>Creations by date</p>
 
 <p>
-  <a href="{%url 'learning_logs:new_question'%}">Add new question reflexion</a>
+  <a href="{%url 'learning_logs:new_creation'%}">Add new question reflexion</a>
 </p>
 
-<ul>
-  {% for answer in answers%}
-    <li>
-      <p>{{answer.date_added|date:'M d,Y H:i'}} </p>
-      <p>{{answer.question}} </p>
-      <p>{{answer.text|linebreaks}}</p>
-      <p><a href="{%url 'learning_logs:edit_question' answer.id %}">
+<ul class='list-group'>
+  {% for creation in creations%}
+    <li class='list-group-item'>
+      <b>{{creation.title}}</b> {{creation.date_added|date:'M d, Y'}} </p>
+      <p>{{creation.goal}}</p>
+      <p><a href="{%url 'learning_logs:edit_creation' creation.pk %}">
         Edit entry</a></p>
     </li>
 
