--- a/between_app/templates/between_app/_base.html
+++ b/between_app/templates/between_app/_base.html
@@ -27,7 +27,7 @@
         <div class='collapse navbar-collapse' id='navbarCollapse'>
             <ul class='navbar-nav me-auto mb2 mb-md-0'> <!-- 'me' refers to left, and 'ms' to right -->
                 <li class='nav-item'>
-                    <a class='nav-link' href="{% url 'between_app:results_list' %}">
+                    <a class='nav-link' href="{% url 'between_app:test_home' %}">
                         My Tests</a></li>
                 <li class='nav-item'>
                     <a class='nav-link' href="{% url 'learning_logs:index' %}">
