--- a/between_app/templates/between_app/index.html
+++ b/between_app/templates/between_app/index.html
@@ -3,18 +3,18 @@
 {%block title%}PsyProfile{%endblock title%}
 {% load django_bootstrap5%}
 
-{%block page_header%}Therapeutic Profiles{%endblock page_header%}
+{%block page_header%}CreaTherapy:{%endblock page_header%}
 
 
 {%block content%}
 
 <div class="card mb-3">
     <div class="card-body">
-<h2 class="card-title">Profile: </h2>
-<p class="card-text">Therapeutic Profiles is a project to help therapist and clients to find their unique needs, having names to organise the complexities of human beings.</p>
+<h2 class="card-title">Hey! </h2>
+<p class="card-text">CreaTherapy a project to re-imagine psychotherapy, in creative way from theory to practice.</p>
 <p class="card-text">They aim to move between the old traditions, in a context where therapist and clients are learning from multiple points of view and mixing ideas and practices from many sources becomes the new norm.</p>
 <a class="badge bg-primary p-2 m-2" href={% url 'pages:index' %}>Read the theory </a>
-<a class="badge bg-primary p-2 m-2" href={% url 'between_app:profile_test' %}>Take the test </a></br>
+<a class="badge bg-primary p-2 m-2" href={% url 'between_app:profile_test' %}>Take a profile test</a></br>
 
 </div>
 </div>
