--- a/learning_logs/templates/learning_logs/creating/creation_item.html
+++ b/learning_logs/templates/learning_logs/creating/creation_item.html
@@ -9,13 +9,13 @@
       <h5 class="card-title">{{creations.title}}</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">{{creations.date_added|date}}</h6>
       <Goal class="card-text">Goal of the exploration: {{creations.goal}} </P>
-      <My class="card-text">My sensations: {{creations.sensation}} </p>
-      <My class="card-text">My connections: {{creations.connection}}</p>
-      <p class="card-text">My metaphoric space: {{creations.metaphore}}  </p>
-      <p class="card-text">My Concepts: {{creations.concepts}}</p>
-      <p class="card-text">My craft idea: {{creations.craft}}</p>
-      <a href="{% url 'learning_log:creations_by_date' %}" class="card-link">Back to Creations</a>
-      <a href="{% url 'learning_log:index' %}" class="card-link">Back to Journal's home</a>
+      <My class="card-text">My sensations: {{creations.text_sensation}} </p>
+      <My class="card-text">My connections: {{creations.text_conection}}</p>
+      <p class="card-text">My metaphoric space: {{creations.text_metaphore}}  </p>
+      <p class="card-text">My Concepts: {{creations.text_concepts}}</p>
+      <p class="card-text">My craft idea: {{creations.text_craft}}</p>
+      <a href="{% url 'learning_logs:creations_by_date' %}" class="card-link">Back to Creations</a></br>
+      <a href="{% url 'learning_logs:index' %}" class="card-link">Back to Journal's home</a>
     </div>
   </div>
 
